The site no longer has unnecessary scrollbars

--- a/public/src/App.css
+++ b/public/src/App.css
@@ -17,7 +17,7 @@ body,
 .page-content {
     flex-grow: 1;
     flex-basis: 0;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .openlayers-map-container {
